TBRJ-1 Adding book controller with mocked results
