# server/api/controllers/book/book.router.js
@@ -1,0 +1,10 @@
+import * as express from 'express';
+import controller from './book.controller';
+
+export default express
+  .Router()
+  .post('/', controller.create)
+  .put('/:id', controller.update)
+  .get('/', controller.getAll)
+  .get('/:id', controller.get)
+  .delete('/:id', controller.delete);
